GPC/tests/examples/fail/wrongArgCount.gpc


int GPRM::Test::fun() {
    return 1;
}

void GPRM::Test::wrongArgCount() {
    fun(23);
}
